Fix import path for three/addons in index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     {
         "imports": {
             "three": "https://unpkg.com/three@latest?module",
-            "three/addons/": "https://unpkg.com/three@latest/examples/jsm/?module",
+            "three/addons": "https://unpkg.com/three@latest/examples/jsm/?module",
             "camera-controls": "https://unpkg.com/camera-controls?module"
         }
     }
